tests/invalid/str_unsupported_type/main.py
x: bytes = b"hello"
y: str = str(x)
